<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCalc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="error">Error</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="del">DEL</string>
    <string name="clear">AC</string>
    <string name="div">÷</string>
    <string name="mul">×</string>
    <string name="plus">+</string>
    <string name="minus">−</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="enter">↓</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="ln">ln</string>
    <string name="lg">log</string>
    <string name="leftParen">(</string>
    <string name="rightParen">)</string>
    <string name="sqrt">√</string>
    <string name="power">^</string>
    <string name="factorial">!</string>
    <string name="basic">Basic panel</string>
    <string name="advanced">Advanced panel</string>
    <string name="clear_history">Clear history</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="voice">Voice</string>
    <string name="loadingvoice">Loading Voice Package…</string>
    
    <string name="voicesummary">真人播报每次按键</string>
    <string name="haptic">Haptic Feedback</string>
    <string name="hapticsummary">按键时震动</string>

</resources>