<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/simplePad"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:layout_weight="6.0"
    android:background="@color/frame_back"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/display"
        style="@style/display_style" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <Button
            android:id="@+id/mul"
            style="@style/button_style"
            android:text="@string/mul" />

        <Button
            android:id="@+id/div"
            style="@style/button_style"
            android:text="@string/div" />

        <Button
            android:id="@+id/del"
            style="@style/red_button_style"
            android:text="@string/del" />

        <Button
            android:id="@+id/ac"
            style="@style/red_button_style"
            android:text="@string/clear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <Button
            android:id="@+id/digit7"
            style="@style/button_style"
            android:text="@string/digit7" />

        <Button
            android:id="@+id/digit8"
            style="@style/button_style"
            android:text="@string/digit8" />

        <Button
            android:id="@+id/digit9"
            style="@style/button_style"
            android:text="@string/digit9" />

        <Button
            android:id="@+id/minus"
            style="@style/button_style"
            android:text="@string/minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="2.0" >

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="3.0"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" >

                <Button
                    android:id="@+id/digit4"
                    style="@style/button_style"
                    android:text="@string/digit4" />

                <Button
                    android:id="@+id/digit5"
                    style="@style/button_style"
                    android:text="@string/digit5" />

                <Button
                    android:id="@+id/digit6"
                    style="@style/button_style"
                    android:text="@string/digit6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" >

                <Button
                    android:id="@+id/digit1"
                    style="@style/button_style"
                    android:text="@string/digit1" />

                <Button
                    android:id="@+id/digit2"
                    style="@style/button_style"
                    android:text="@string/digit2" />

                <Button
                    android:id="@+id/digit3"
                    style="@style/button_style"
                    android:text="@string/digit3" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" >

            <Button
                android:id="@+id/plus"
                style="@style/button_style"
                android:text="@string/plus" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" >

            <Button
                android:id="@+id/digit0"
                style="@style/button_style"
                android:text="@string/digit0" />

            <Button
                android:id="@+id/dot"
                style="@style/button_style"
                android:text="@string/dot" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" >

            <Button
                android:id="@+id/equal"
                style="@style/button_style"
                android:text="@string/equal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>